<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivLoadedImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/loaded_image"
        android:contentDescription="@string/loaded_image_description"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivLoadedImageBoundingBoxes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/ivLoadedImage"
        app:layout_constraintBottom_toBottomOf="@+id/ivLoadedImage"
        app:layout_constraintStart_toStartOf="@+id/ivLoadedImage"
        app:layout_constraintEnd_toEndOf="@+id/ivLoadedImage"
        android:contentDescription="@string/ivBoundingBoxes_description"
        android:visibility="visible"
        android:scaleType="center" />

    <!-- Load and rotate buttons -->

    <ImageButton
        android:id="@+id/load_image_button"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/image_placeholder"
        android:contentDescription="@string/load_image"
        android:padding="@dimen/spacing_small"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/circular_alert_load_button"
        android:layout_width="@dimen/round_button_large"
        android:layout_height="@dimen/round_button_large"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:scaleType="fitCenter"
        android:padding="@dimen/padding_xsmall"
        android:background="@drawable/alert_circle_button"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/view_alert_button"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/loaded_image_rotate_button"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_switch"
        android:contentDescription="@string/details"
        android:padding="@dimen/spacing_small"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <include
        layout="@layout/custom_alert_button"
        android:id="@+id/alert_loaded_button"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>