<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CardContainer">

    <TextView
        android:id="@+id/tvAboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TitleText"
        android:text="@string/menu_about" />

    <ScrollView
        android:id="@+id/about_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutTitle"
        app:layout_constraintBottom_toTopOf="@+id/fabBugReport"
        android:padding="@dimen/paragraph_padding"
        android:layout_margin="@dimen/paragraph_margin"
        android:gravity="top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/aboutAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/SubtitleTop"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/aboutAppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutAppName"
                style="@style/ParagraphBodyBottom"
                android:text="@string/app_version"/>

            <TextView
                android:id="@+id/aboutAppCreator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutAppVersion"
                style="@style/SubtitleTop"
                android:text="@string/app_creator"/>

            <TextView
                android:id="@+id/aboutAppDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutAppCreator"
                style="@style/ParagraphBodyBottom"
                android:text="@string/app_date"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBugReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/colorButtonNeutral"
        app:srcCompat="@drawable/icon_bug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/glVerticalMiddle1st"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMoreFromDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/colorButtonNeutral"
        app:srcCompat="@drawable/icon_more_apps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glVerticalMiddle1st"
        app:layout_constraintEnd_toEndOf="@+id/glVerticalMiddle2nd"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="@color/colorButtonNeutral"
        app:srcCompat="@drawable/icon_review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glVerticalMiddle2nd"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glVerticalMiddle1st"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glVerticalMiddle2nd"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>